Added boilerplate HTML page contents

--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
   </head>
 
   <body>
+    <header role="banner">
+      <h1>Discover hidden places in the world around you</h1>
+
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    </header>
+
     <main role="main">
-      
+      <div id="phone">
+
+      </div>
+
+      <section>
+        <h2>Your personal travel guide</h2>
+
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+        <img alt="" src="" loading="lazy" width="" height="">
+      </section>
+
+      <section>
+        <img alt="" src="" loading="lazy" width="" height="">
+
+        <h2>Coming Soon for iPhone and Android</h2>
+
+        <p><a href="#">Download Excursion (Coming soon!)</a></p>
+      </section>
     </main>
+
+    <footer role="contentinfo">
+      <p>&copy; Excursion</p>
+    </footer>
   </body>
 </html>
