HTML and CSS content added. Page complete.

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
     </header>
 
     <main role="main">
-      <div id="phone">
-
-      </div>
+      <video muted autoplay loop>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+      </video>
 
       <section>
         <h2>Your personal travel guide</h2>
 
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
-        <img alt="" src="" loading="lazy" width="" height="">
+        <img alt="A series of round orange tents at dusk camping in the southwest US." src="resources/images/camp.jpg" loading="lazy" width="896" height="527">
       </section>
 
       <section>
-        <img alt="" src="" loading="lazy" width="" height="">
+        <img alt="Mobile phone icon." src="resources/images/phone.png" loading="lazy" width="64" height="108">
 
         <h2>Coming Soon for iPhone and Android</h2>
 
